--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,45 @@ body{
 h1{
 	text-align: center;
 	background-color: #007896;
+	font-size: 40px;
+}
+.aside2 {
+	background-color: #964D08;
+	text-align: center;
+	boarder:2px white;
+	float: right;
+	width: 30%;
+	top: 0;
+  padding: 40px;
+  margin-right: 50px;
+}
+embed{
+	float: left;
+	width: 100%;
+	height: 550px;
+}
+dt{
+	text-decoration-line: underline;
+	font-weight: bold;
+	padding: 10px;
+	margin-top: 20px;
+	font-size: 20px;
 }
 
-footer{
-	background-color: #FF9736;
+dd{
+	padding: 10px;
 }
 
-aside {
+.resumepdf{
+	width: 50%;
+}
+.indexNav{
+	padding: 10px;
+	font-weight: bold;
+	font-size: 20px;
+	background-color:#19B9E3 ;
+}
+.indexAside {
 	background-color: #19B9E3;
 	text-align: center;
 	border-style: dotted;
@@ -20,7 +52,69 @@ aside {
  	width: 50%;
  	padding: 10px;
 }
-
-td,tr, nav{
+.articleAM {
+	background-color: #19B9E3;
+	text-align: left;
+	boarder:2px white;
+	float: left;
+ 	width: 50%;
+ 	padding-top: 10%;
+ 	padding-bottom: 10%;
+ 	padding-left: 10px;
+ 	padding-right: 10px;
+ 	margin: 10px;
+}
+.asideAM{
+	float:right;
+	width: 40%;
+}
+p{
+	line-height: 3 ;
 	padding: 10px;
 }
+
+.formContactMe {
+	font-size: large;
+	background-color: #19B9E3;
+	text-align: center;
+	boarder:2px black;
+	padding-bottom: 50px;
+	padding-top: 50px;
+	float: right;
+ 	width: 50%;
+ 	margin-block: 10px;
+}
+input{
+	margin: 10px;
+}.ContactMeArt {
+	background-color: #19B9E3;
+	text-align: left;
+	boarder:2px white;
+	float: left;
+ 	width: 40%;
+ 	height: 50%;
+}
+
+
+
+ul{
+  list-style-type: none;
+  display: inline;
+  position: fixed;
+  bottom: 0;
+}
+
+li{
+	float: left;
+	padding: 10px;
+	background-color: #FF9736;
+	display: block;
+	text-align: center;
+}
+
+footer{
+	background-color: #FF9736;
+	text-align: center;
+	width: 100%;
+
+} 
